一部変更に加えてmain.cssにコードを記載

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -1,14 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="ja">
     <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="../css/main.css">
         <title>htmlのテスト</title>
     </head>
     <body>
         <p class="title">
-            <b>現在開発しているものは下記のurlをしようしています。</b>
+            <b>現在開発しているものは下記のurlをしようしています。</b> 
         </p>
         <p class="url_list">
             <a class="url" href="https://news.yahoo.co.jp/" id="link1">YahooNewsのリンク</a>
             <a class="url" href="https://github.com/PARKUDP/news" id="link2">GitHubのディレクトリ</a>
+            <a class="url" href="https://news.yahoo.co.jp/ranking/access/news/it-science" id="link3">Yahoo</a>
         </p>
     </body>
 </html>
