--- a/src/html/main.html
+++ b/src/html/main.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="../css/main.css">
-        <title>htmlのテスト</title>
-    </head>
-    <body>
-        <p class="title">
-            <b>現在開発しているものは下記のurlをしようしています。</b> 
-        </p>
-        <p class="url_list">
-            <a class="url" href="https://news.yahoo.co.jp/" id="link1">YahooNewsのリンク</a>
-            <a class="url" href="https://github.com/PARKUDP/news" id="link2">GitHubのディレクトリ</a>
-            <a class="url" href="https://news.yahoo.co.jp/ranking/access/news/it-science" id="link3">Yahoo</a>
-        </p>
-    </body>
+    <link rel="stylesheet" href="../css/main.css">
+    <!--ランキング表示テスト-->
+    <ul class="ranking">
+        <li><p>トップ記事</p></li>
+        <li><p>二番目の記事</p></li>
+        <li><p>三番目の記事</p></li>
+        <li><p>四番目の記事</p></li>
+        <li><p>五番目の記事</p></li>
+    </ul>
 </html>
